--- a/templates/index.html
+++ b/templates/index.html
@@ -82,12 +82,13 @@
         <pre id="result"></pre>
     </div>
     <hr>
-    <footer class="px-3 pb-3">
+    <footer class="d-flex justify-content-between px-3 pb-3">
         <small>
             &copy;
             <script>document.write(new Date().getFullYear())</script>
             Mark Jacobson
         </small>
+        <small>Powered by jschon v{{ version }}</small>
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
