--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,41 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>jschon.dev | JSON Schema Validator</title>
+    <title id="title">
+        jschon.dev
+    </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="static/favicon.ico">
+    <link rel="icon" href="/static/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.1/dist/cerulean/bootstrap.min.css" integrity="sha256-0UiGxiZByjUhEbxgTFZnqkriiq55ZRLx34PeJPtFjAs=" crossorigin="anonymous">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.min.css" integrity="sha256-sEGfrwMkIjbgTBwGLVK38BG/XwIiNC/EAG9Rzsfda6A=" crossorigin="anonymous">
 </head>
 <body>
 <div class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-dark bg-dark px-3">
-        <span class="navbar-text h5 mt-2">
-            jschon.dev | JSON Schema Validator
-        </span>
+    <nav class="navbar navbar-dark bg-dark p-3">
+        <a class="navbar-brand">
+            jschon.dev
+        </a>
+        <div class="flex-grow-1 mx-5 mt-1">
+            <div class="navbar-nav nav-pills nav-justified flex-row">
+                <button id="stable-btn" class="nav-link" onclick="setBranch('stable', '{{ stable_version }}');"></button>
+                <button id="next-btn" class="nav-link" onclick="setBranch('next', '{{ next_version }}');"></button>
+            </div>
+            <input id="branch" type="hidden"/>
+        </div>
         <ul class="nav justify-content-end">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
-                    <img src="static/readthedocs-logo-light.svg" style="height: 30px">
+                    <img src="/static/readthedocs-logo-light.svg" style="height: 30px">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
-                    <a class="dropdown-item" href="https://jschon.readthedocs.io/en/stable/" target="_blank">Read the docs</a>
+                    <a class="dropdown-item" href="https://jschon.readthedocs.io/en/stable/" target="_blank">stable</a>
+                    <a class="dropdown-item" href="https://jschon.readthedocs.io/en/latest/" target="_blank">next</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#">
-                    <img src="static/GitHub-Mark-Light-64px.png" style="height: 30px">
+                    <img src="/static/GitHub-Mark-Light-64px.png" style="height: 30px">
                 </a>
                 <div class="dropdown-menu dropdown-menu-end">
                     <a class="dropdown-item" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
@@ -34,69 +44,65 @@
             </li>
         </ul>
     </nav>
-    <div id="input-panel" class="container-fluid d-flex flex-column border-bottom border-dark border-2"
-         style="height: 47vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
-        <div class="row mt-2">
-            <div class="col">
-                <label for="schema" class="form-label">JSON Schema</label>
+    <main class="flex-grow-1">
+        <div id="input-panel" class="container-fluid d-flex flex-column border-bottom border-dark border-2"
+             style="height: 47vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
+            <div class="d-flex flex-row mt-2 flex-grow-1">
+                <div id="schema-panel" class="pb-4 mb-2 pe-2" style="width: 50%">
+                    <label for="schema" class="form-label">JSON Schema</label>
+                    <div id="schema" class="form-control rounded-0 w-100 h-100">{"$id": "https://jschon.dev/schema"}</div>
+                </div>
+                <div class="pb-4 mb-2 ps-2 flex-grow-1">
+                    <label for="instance" class="form-label">JSON Instance</label>
+                    <div id="instance" class="form-control rounded-0 w-100 h-100">{}</div>
+                </div>
             </div>
-            <div class="col">
-                <label for="instance" class="form-label">JSON Instance</label>
-            </div>
-        </div>
-        <div class="row flex-grow-1">
-            <div class="col">
-                <div id="schema" class="form-control rounded-0 w-100 h-100">{"$id": "https://jschon.dev/schema"}</div>
-            </div>
-            <div class="col">
-                <div id="instance" class="form-control rounded-0 w-100 h-100">{}</div>
-            </div>
-        </div>
-        <div class="row my-3">
-            <div class="col">
-                <select id="metaschema-uri" class="form-control" onchange="set$schema();">
-                    <option value="https://json-schema.org/draft/2019-09/schema">Metaschema: 2019-09</option>
-                    <option value="https://json-schema.org/draft/2020-12/schema" selected>Metaschema: 2020-12</option>
-                </select>
-            </div>
-            <div class="col-6 d-grid">
-                <input id="evaluate" type="button" value="Evaluate" onclick="eval();"
-                       class="btn btn-secondary">
-            </div>
-            <div class="col">
-                <select id="output-format" class="form-control">
-                    <option value="flag">Output: Flag</option>
-                    <option value="basic">Output: Basic</option>
-                    <option value="detailed" selected>Output: Detailed</option>
-                    <option value="verbose">Output: Verbose</option>
-                </select>
+            <div class="row my-3">
+                <div class="col">
+                    <select id="metaschema-uri" class="form-control" onchange="set$schema();">
+                        <option value="https://json-schema.org/draft/2019-09/schema">Meta-schema: 2019-09</option>
+                        <option value="https://json-schema.org/draft/2020-12/schema" selected>Meta-schema: 2020-12</option>
+                    </select>
+                </div>
+                <div class="col-6 d-grid">
+                    <input id="evaluate" type="button" value="Evaluate" onclick="eval();"
+                           class="btn btn-secondary">
+                </div>
+                <div class="col">
+                    <select id="output-format" class="form-control">
+                        <option value="flag">Output: Flag</option>
+                        <option value="basic">Output: Basic</option>
+                        <option value="detailed" selected>Output: Detailed</option>
+                        <option value="verbose">Output: Verbose</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="m-3">
-        <span id="result-caption" class="fs-5"></span>
-        <p id="result-subcaption" class="text-muted d-none"></p>
-    </div>
-    <div class="mx-3 flex-grow-1">
-        <pre id="result"></pre>
-    </div>
+        <div class="m-3">
+            <span id="result-caption" class="fs-5"></span>
+            <p id="result-subcaption" class="text-muted d-none"></p>
+        </div>
+        <div class="mx-3 flex-grow-1">
+            <pre id="result"></pre>
+        </div>
+    </main>
     <hr>
-    <footer class="d-flex justify-content-between px-3 pb-3">
-        <small>
-            &copy;
-            <script>document.write(new Date().getFullYear())</script>
-            Mark Jacobson
+    <footer class="d-flex justify-content-center px-3 pb-3">
+        <small class="text-info">
+            made with ☕, 🍍 and ❤️ by
+            <a href="https://github.com/marksparkza" target="_blank" class="text-info text-decoration-none">
+                marksparkza
+            </a>
         </small>
-        <small>Powered by jschon v{{ version }}</small>
     </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU" crossorigin="anonymous"></script>
-<script src="static/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="static/evaluate.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/evaluate.js" type="text/javascript" charset="utf-8"></script>
 <script>
-    ace.config.set("basePath", "static/ace-builds/src-min-noconflict");
+    ace.config.set("basePath", "/static/ace-builds/src-min-noconflict");
     editorOptions = {
         mode: "ace/mode/json",
         theme: "ace/theme/clouds",
@@ -108,7 +114,10 @@
     var instanceEditor = ace.edit("instance", editorOptions);
 
     $("#input-panel").resizable({handles: "s", minHeight: 200});
+    $("#schema-panel").resizable({handles: "e", minWidth: 200});
+
     set$schema();
+    setBranch('stable', '{{ stable_version }}');
 </script>
 </body>
 </html>
