--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
     <hr>
     <footer class="d-flex justify-content-center px-3 pb-3">
         <small class="text-info">
-            made with ☕, 🍍 and ❤️ by
+            made with ❤️ by
             <a href="https://github.com/marksparkza" target="_blank" class="text-info text-decoration-none">
                 marksparkza
             </a>
