Pinpoint locations :dart:

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,15 +46,15 @@
     </nav>
     <main class="flex-grow-1">
         <div id="input-panel" class="container-fluid d-flex flex-column border-bottom border-dark border-2"
-             style="height: 47vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
+             style="height: 41vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
             <div class="d-flex flex-row mt-2 flex-grow-1">
                 <div id="schema-panel" class="pb-4 mb-2 pe-2" style="width: 50%">
                     <label for="schema" class="form-label">JSON Schema</label>
-                    <div id="schema" class="form-control rounded-0 w-100 h-100">{"$id": "https://jschon.dev/schema"}</div>
+                    <div id="schema" class="form-control rounded-0 w-100 h-100"></div>
                 </div>
                 <div class="pb-4 mb-2 ps-2 flex-grow-1">
                     <label for="instance" class="form-label">JSON Instance</label>
-                    <div id="instance" class="form-control rounded-0 w-100 h-100">{}</div>
+                    <div id="instance" class="form-control rounded-0 w-100 h-100"></div>
                 </div>
             </div>
             <div class="row my-3">
@@ -99,25 +99,31 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU" crossorigin="anonymous"></script>
-<script src="/static/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-<script src="/static/evaluate.js" type="text/javascript" charset="utf-8"></script>
+<script src="/static/ace-builds/src-min-noconflict/ace.js"></script>
+<script src="/static/js/eval.js"></script>
+<script src="/static/js/jump.js"></script>
+<script src="/static/js/ui.js"></script>
 <script>
-    ace.config.set("basePath", "/static/ace-builds/src-min-noconflict");
-    editorOptions = {
-        mode: "ace/mode/json",
-        theme: "ace/theme/clouds",
-        fontSize: "12.25px",
-        printMargin: false,
-        highlightActiveLine: false,
-    };
-    var schemaEditor = ace.edit("schema", editorOptions);
-    var instanceEditor = ace.edit("instance", editorOptions);
-
-    $("#input-panel").resizable({handles: "s", minHeight: 200});
-    $("#schema-panel").resizable({handles: "e", minWidth: 200});
-
+    schemaEditor.setValue(JSON.stringify({
+        "$schema": "https://json-schema.org/draft/2020-12/schema",
+        "$id": "https://example.com/tree",
+        "type": "object",
+        "properties": {
+            "data": true,
+            "children": {
+                "type": "array",
+                "items": {
+                    "$ref": "#"
+                }
+            }
+        },
+        "unevaluatedProperties": false
+    }));
+    instanceEditor.setValue(JSON.stringify({
+        "children": [{"tada": "🎉"}]
+    }));
     set$schema();
-    setBranch('stable', '{{ stable_version }}');
+    setBranch("next", "{{ next_version }}");
 </script>
 </body>
 </html>
