Reset initial state

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     </nav>
     <main class="flex-grow-1">
         <div id="input-panel" class="container-fluid d-flex flex-column border-bottom border-dark border-2"
-             style="height: 41vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
+             style="height: 45vh" onresize="schemaEditor.resize(); instanceEditor.resize();">
             <div class="d-flex flex-row mt-2 flex-grow-1">
                 <div id="schema-panel" class="pb-4 mb-2 pe-2" style="width: 50%">
                     <label for="schema" class="form-label">JSON Schema</label>
@@ -104,24 +104,8 @@
 <script src="/static/js/jump.js"></script>
 <script src="/static/js/ui.js"></script>
 <script>
-    schemaEditor.setValue(JSON.stringify({
-        "$schema": "https://json-schema.org/draft/2020-12/schema",
-        "$id": "https://example.com/tree",
-        "type": "object",
-        "properties": {
-            "data": true,
-            "children": {
-                "type": "array",
-                "items": {
-                    "$ref": "#"
-                }
-            }
-        },
-        "unevaluatedProperties": false
-    }));
-    instanceEditor.setValue(JSON.stringify({
-        "children": [{"tada": "🎉"}]
-    }));
+    schemaEditor.setValue('{"$id": "https://jschon.dev/schema"}');
+    instanceEditor.setValue('{}');
     set$schema();
     setBranch("next", "{{ next_version }}");
 </script>
