--- a/templates/index.html
+++ b/templates/index.html
@@ -89,10 +89,13 @@
     <hr>
     <footer class="d-flex justify-content-center px-3 pb-3">
         <small class="text-info">
-            made with ❤️ by
-            <a href="https://github.com/marksparkza" target="_blank" class="text-info text-decoration-none">
-                marksparkza
-            </a>
+            This site is a development testbed for the
+            <a class="text-info text-decoration-none" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
+            Python library.
+            It will always be free.
+            No data will ever be collected.
+            Kindly hosted by
+            <a class="text-info text-decoration-none" href="https://www.saeon.ac.za/" target="_blank">SAEON</a>.
         </small>
     </footer>
 </div>
