--- a/templates/index.html
+++ b/templates/index.html
@@ -88,14 +88,13 @@
     </main>
     <hr>
     <footer class="d-flex justify-content-center px-3 pb-3">
-        <small class="text-info">
+        <small class="text-muted">
             This site is a development testbed for the
-            <a class="text-info text-decoration-none" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
+            <a class="text-decoration-none" href="https://github.com/marksparkza/jschon" target="_blank">jschon</a>
             Python library.
-            It will always be free.
-            No data will ever be collected.
+            No data is collected.
             Kindly hosted by
-            <a class="text-info text-decoration-none" href="https://www.saeon.ac.za/" target="_blank">SAEON</a>.
+            <a class="text-decoration-none" href="https://www.saeon.ac.za/" target="_blank">SAEON</a>.
         </small>
     </footer>
 </div>
