--- a/ui/templates/lib.html
+++ b/ui/templates/lib.html
@@ -4,8 +4,8 @@
 <script async src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha256-gvZPYrsDwbwYJLD5yeBfcNujPhRoGOY831wwbIzz3t0=" crossorigin="anonymous"></script>
 <script async src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 <script async src="https://cdn.jsdelivr.net/npm/jquery-ui@1.13.2/dist/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/ace-builds@1.31.2/src-min-noconflict/ace.js" integrity="sha256-ScWQ2xfi8beTMGHcIj8J03x83jnNG/1Fz6OG+UCsHnw=" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/ace-builds@1.31.2/src-min-noconflict/ace.js" integrity="sha256-ScWQ2xfi8beTMGHcIj8J03x83jnNG/1Fz6OG+UCsHnw=" crossorigin="anonymous"></script>
 
 <script defer src="/static/scripts/__init__.js"></script>
-<script src="/static/scripts/eval.js"></script>
-<script src="/static/scripts/jump.js"></script>
+<script defer src="/static/scripts/eval.js"></script>
+<script defer src="/static/scripts/jump.js"></script>
