--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>
-        jschon {{ version }}
+        jschon.dev
     </title>
 
     <link id="bootswatch-css"
@@ -16,7 +16,6 @@
           href="{{ css.jquery_ui.href }}"
           integrity="{{ css.jquery_ui.integrity }}"
           crossorigin="anonymous">
-
 </head>
 <body>
 <div class="d-flex flex-column min-vh-100">
@@ -44,7 +43,7 @@
                 </div>
                 <div class="col-6 d-grid">
                     <input id="evaluate" type="button" value="Evaluate" onclick="eval();"
-                           class="btn btn-secondary">
+                           class="btn btn-primary">
                 </div>
                 <div class="col">
                     <select id="output-format" class="form-control">
