--- a/ui/templates/footer.html
+++ b/ui/templates/footer.html
@@ -1,12 +1,12 @@
 <footer>
     <hr class="mb-0 mt-2">
-    <div class="d-flex justify-content-center p-3 bg-light">
-        <small class="text-muted">
-            🛸 development website for
+    <div class="d-flex justify-content-center p-3 bg-secondary">
+        <small>
+            ⚒ development website for
             <a class="text-decoration-none"
                href="https://github.com/marksparkza/jschon" target="_blank">
                 jschon
-            </a> 🛸
+            </a> ⚒
         </small>
     </div>
 </footer>
