Reorganise UI code

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,7 +5,7 @@
             ⚒ development website for
             <a class="text-decoration-none"
                href="https://github.com/marksparkza/jschon" target="_blank">
-                jschon
+                jschon {{ version }}
             </a> ⚒
         </small>
     </div>
