--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 
 <header>
     <nav class="navbar bg-primary p-3" data-bs-theme="dark">
-        <a href="" class="navbar-brand pb-2" title="jschon {{ version }}">
+        <a href="/" class="navbar-brand pb-2">
             <span class="fs-4 me-2">
                 🚀
             </span>
@@ -12,17 +12,17 @@
         </a>
 
         <ul class="nav nav-pills">
-            {% call nav_menu('documentation', '/static/images/readthedocs-logo-light.svg') %}
+            {% call nav_menu('documentation', '/static/images/readthedocs.svg') %}
                 {{ nav_menu_link('stable', 'https://jschon.readthedocs.io/en/stable/') }}
                 {{ nav_menu_link('dev', 'https://jschon.readthedocs.io/en/latest/') }}
             {% endcall %}
 
-            {% call nav_menu('source code', '/static/images/GitHub-Mark-Light-64px.png') %}
+            {% call nav_menu('source code', '/static/images/github.png') %}
                 {{ nav_menu_link('jschon', 'https://github.com/marksparkza/jschon') }}
                 {{ nav_menu_link('jschon.dev', 'https://github.com/marksparkza/jschon.dev') }}
             {% endcall %}
 
-            {% call nav_menu('theme', '/static/images/bootswatch-logo.svg') %}
+            {% call nav_menu('theme', '/static/images/bootswatch.svg') %}
                 {% for theme in css.bootswatch | sort %}
                     <button id="theme-btn-{{ theme }}" class="dropdown-item theme-btn"
                             onclick="setTheme('{{ theme }}')">{{ theme }}
